--- a/api_config.json
+++ b/api_config.json
@@ -1,5 +1,6 @@
 {
   "api_port": "6661",
+  "statsd_host": "",
   "functions": [
     {"name": "shutdown", "enabled": true},
     {"name": "reboot", "enabled": true},
