--- a/api_config.json
+++ b/api_config.json
@@ -1,10 +1,12 @@
 {
   "api_port": "6661",
   "statsd_host": "",
+  "default_user": "admin",
+  "default_user_token": "mytoken",
   "ssl": {
     "enabled": true,
-    "cert_file": "/etc/api/ssl/cert.cert",
-    "key_file": "/etc/api/ssl/key.key"
+    "cert_file": "cert.cert",
+    "key_file": "key.key"
   },
   "functions": [
     {"name": "power", "enabled": true},
