new config layout

--- a/ansible_web-api.service
+++ b/ansible_web-api.service
@@ -5,8 +5,8 @@ Description=web-api
 Type=simple
 User=root
 Group=root
-ExecStartPre=/bin/sleep 15
-ExecStart=/etc/api/main
+ExecStartPre=/bin/sleep 3
+ExecStart=/etc/api/main -config=/etc/api/api_config.json
 Restart=always
 
 [Install]
